[package]
name = "Solanabot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures = "0.3"
serde_json = "1.0"
url = "2.2"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"


